# jsonstraw

./: .gitignore  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: build.yml  tag.yml
test/: small.json  small2.json  small3.json  test_straw.py
